improve the wording, remove button radius, fix contact buttons margin on mobile

--- a/src/layouts/gatsrap.scss
+++ b/src/layouts/gatsrap.scss
@@ -233,3 +233,7 @@ a {
   text-align: left;
   color: #000;
 }
+
+.btn--rectangle {
+  border-radius: 0 !important;
+}
